--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>dependencies</module>
         <module>commons</module>
+        <module>gateway</module>
+        <module>sms-center</module>
         <module>user-center</module>
     </modules>
 
