--- a/user-center/pom.xml
+++ b/user-center/pom.xml
@@ -77,14 +77,14 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        
 
         <!-- 自定义工具包-->
         <dependency>
             <groupId>com.banmingi.community-plus</groupId>
-            <artifactId>commons-utils</artifactId>
+            <artifactId>common-utils</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
 
     </dependencies>
 
