--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
     <modules>
         <module>dependencies</module>
-        <module>commons</module>
         <module>gateway</module>
+        <module>common</module>
         <module>sms-center</module>
         <module>user-center</module>
         <module>content-center</module>
