--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <module>dependencies</module>
         <module>gateway</module>
         <module>common</module>
-        <module>sms-center</module>
+        <module>notification-center</module>
         <module>user-center</module>
         <module>content-center</module>
         <module>cloud-center</module>
