调整认证与授权

--- a/cloud-center/pom.xml
+++ b/cloud-center/pom.xml
@@ -21,6 +21,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
@@ -40,17 +44,8 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>fastjson</artifactId>
-                    <groupId>com.alibaba</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
+        <!-- aliyun oss-->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
@@ -62,18 +57,7 @@
             </exclusions>
         </dependency>
 
-        <!-- 自定义工具包-->
-        <dependency>
-            <groupId>com.banmingi.community-plus</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.parent.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jdom</artifactId>
-                    <groupId>org.jdom</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+
 
 
     </dependencies>
