--- a/content-center/pom.xml
+++ b/content-center/pom.xml
@@ -97,7 +97,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.banmingi.community-plus</groupId>
+            <artifactId>auth</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 
