--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>dependencies</module>
         <module>gateway</module>
+        <module>auth</module>
         <module>common</module>
         <module>notification-center</module>
         <module>user-center</module>
