个人通知列表查询、未读通知数查询

--- a/notification-center/pom.xml
+++ b/notification-center/pom.xml
@@ -79,10 +79,21 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--page helper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
         <!-- 自定义工具包-->
         <dependency>
             <groupId>com.banmingi.community-plus</groupId>
             <artifactId>common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.banmingi.community-plus</groupId>
+            <artifactId>auth</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
